# pseq

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
npm/pseq/: README.md  package.json
scripts/: prepare-release
src/: capture.rs  cli.rs  codec.rs  collection.rs  commit.rs  config.rs  editor.rs  error.rs  fragment.rs  fs_walk.rs  git.rs  history.rs  lib.rs  main.rs  output.rs  paths.rs  render.rs  resolve.rs  run.rs  runner.rs  sequence.rs  store.rs  trust.rs  turn_settings.rs  user_config.rs  yaml.rs
src/capture/: commands.rs  events.rs  model.rs  payloads.rs  promote.rs  providers.rs  records.rs  selection.rs  source_files.rs  sources.rs  types.rs  validation.rs
src/render/: commands.rs  engine.rs  fragments.rs  history.rs  load.rs  model.rs  save.rs  types.rs  validation.rs  variables.rs
src/run/: adapters.rs  command.rs  diagnostics.rs  model.rs  options.rs  process.rs  session.rs  types.rs
src/sequence/: create.rs  edit.rs  model.rs  mutations.rs  queries.rs  records.rs  types.rs  validation.rs
tests/: capture.rs  fragment_registry.rs  history.rs  nested_collections.rs  public_contract.rs  render.rs  run.rs  runner_registry.rs  sequence_registry.rs  store_lifecycle.rs
tests/capture/: import.rs  promote.rs  selection.rs  sources.rs  validation.rs
tests/common/: mod.rs
tests/public_contract/: cli.rs  errors.rs  json_payloads.rs  store_files.rs
tests/render/: errors.rs  history.rs  inclusions.rs  rendering.rs  save_out.rs  variables.rs
tests/run/: capture_output.rs  codex_harness.rs  (+4 more)
(+28 files in other folders)
