[package]
name = "pseq"
version = "0.0.4"
edition = "2024"
license = "MIT"
description = "Simple prompt and command sequencer for CLI agent automation."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
thiserror = "2.0"
toml = "0.8"
uuid = { version = "1.19", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["process", "signal"] }
signal-hook = "0.3"
